:wrench: Fix pixel jumping Titlebar bug

--- a/app/components/TitleBar/TitleBar.scss
+++ b/app/components/TitleBar/TitleBar.scss
@@ -8,7 +8,7 @@
     background-color: $lightergrey;
 
     &__title {
-        margin: 0;
+        margin: 1.18px 0;
         color: $brandColor;
         font-size: 1.6rem;
         font-weight: 500;
